24.1 Kanban part 1